feat: adds notification on start trial
